changed name to brandfluence

--- a/company.html
+++ b/company.html
@@ -150,37 +150,37 @@
     <!-- Influencer Grid -->
     <div class="influencer-grid">
         <div class="influencer-card">
-            <img src="https://via.placeholder.com/80" alt="Influencer Photo" class="influencer-photo">
+            <img src="influencer image.jpg" alt="Influencer Photo" class="influencer-photo">
             <h3>John Doe</h3>
             <p>Tech Reviewer | 50k Followers | $800 per campaign</p>
             <div class="button-group">
                 <button class="invite-btn">Invite</button>
-                <button class="applications-btn">View Applications</button>
+                <!-- <button class="applications-btn">View Applications</button> -->
             </div>
         </div>
 
         <div class="influencer-card">
-            <img src="https://via.placeholder.com/80" alt="Influencer Photo" class="influencer-photo">
+            <img src="influencer image.jpg" alt="Influencer Photo" class="influencer-photo">
             <h3>Sarah Smith</h3>
             <p>Fitness Influencer | 120k Followers | $1500 per campaign</p>
             <div class="button-group">
                 <button class="invite-btn">Invite</button>
-                <button class="applications-btn">View Applications</button>
+                <!-- <button class="applications-btn">View Applications</button> -->
             </div>
         </div>
 
         <div class="influencer-card">
-            <img src="https://via.placeholder.com/80" alt="Influencer Photo" class="influencer-photo">
+            <img src="influencer image.jpg" alt="Influencer Photo" class="influencer-photo">
             <h3>Alex Johnson</h3>
             <p>Food Blogger | 20k Followers | $600 per campaign</p>
             <div class="button-group">
                 <button class="invite-btn">Invite</button>
-                <button class="applications-btn">View Applications</button>
+                <!-- <button class="applications-btn">View Applications</button> -->
             </div>
         </div>
 
         <div class="influencer-card">
-            <img src="https://via.placeholder.com/80" alt="Influencer Photo" class="influencer-photo">
+            <img src="influencer image.jpg" alt="Influencer Photo" class="influencer-photo">
             <h3>Emma Brown</h3>
             <p>Travel Vlogger | 80k Followers | $1000 per campaign</p>
             <div class="button-group">
@@ -199,5 +199,7 @@
             alert('Filter by reach: ' + this.value);
         });
     </script>
+    <script src="js/company-dashboard.js"></script>
+
 </body>
 </html>
