--- a/influencer.html
+++ b/influencer.html
@@ -113,47 +113,49 @@
 
         <div class="company-grid">
             <div class="company-card">
-                <img src="https://via.placeholder.com/80" alt="Company Logo" class="company-logo">
+                <img src="influencer image.jpg" alt="Company Logo" class="company-logo">
                 <h3>Nike</h3>
                 <p>Sports & Lifestyle brand. Looking for fitness influencers.</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
 
             <div class="company-card">
-                <img src="https://via.placeholder.com/80" alt="Company Logo" class="company-logo">
+                <img src="influencer image.jpg" alt="Company Logo" class="company-logo">
                 <h3>Apple</h3>
                 <p>Tech & Innovation. Seeking content creators in tech reviews.</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
 
             <div class="company-card">
-                <img src="https://via.placeholder.com/80" alt="Company Logo" class="company-logo">
+                <img src="influencer image.jpg" alt="Company Logo" class="company-logo">
                 <h3>Coca-Cola</h3>
                 <p>Beverage giant. Need lifestyle & food vloggers.</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
 
             <div class="company-card">
-                <img src="https://via.placeholder.com/80" alt="Company Logo" class="company-logo">
+                <img src="influencer image.jpg" alt="Company Logo" class="company-logo">
                 <h3>Samsung</h3>
                 <p>Tech brand. Searching for smartphone & gadget reviewers.</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
 
             <div class="company-card">
-                <img src="https://via.placeholder.com/80" alt="Company Logo" class="company-logo">
+                <img src="influencer image.jpg" alt="Company Logo" class="company-logo">
                 <h3>Adidas</h3>
                 <p>Sports & fashion. Looking for athletic influencers.</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
 
             <div class="company-card">
-                <img src="https://via.placeholder.com/80" alt="Company Logo" class="company-logo">
+                <img src="influencer image.jpg" alt="Company Logo" class="company-logo">
                 <h3>Netflix</h3>
                 <p>Streaming service. Need entertainment & film influencers.</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
         </div>
     </div>
+    <script src="js/influencer-dashboard.js"></script>
+
 </body>
 </html>
