--- a/login.html
+++ b/login.html
@@ -1,110 +1,269 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Login - Influenza</title>
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="js/auth.js"></script>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Influenxa - Login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        /* General Styles */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+        /* Consistent with previous styles */
+        :root {
+            --primary: #FF6B6B;
+            --secondary: #4ECDC4;
+            --dark: #2D3436;
+            --light: #F8F9FA;
+        }
+
+        * {
             margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', system-ui, sans-serif;
+        }
+
+        body {
+            background: var(--light);
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         /* Login Container */
         .login-container {
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            max-width: 500px;
+            margin: auto;
+            padding: 2rem;
+            width: 90%;
+        }
+
+        .login-card {
+            background: white;
+            padding: 3rem 2rem;
+            border-radius: 20px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.1);
+        }
+
+        .login-header {
             text-align: center;
-            width: 300px;
+            margin-bottom: 2rem;
         }
 
-        /* Heading */
-        .login-container h2 {
-            margin-bottom: 20px;
-            font-size: 22px;
-            color: #333;
+        .login-header h1 {
+            color: var(--dark);
+            margin-bottom: 0.5rem;
         }
 
-        /* Google Button */
-        .google-btn {
-            background-color: #db4437;
-            color: #fff;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            font-size: 16px;
+        .login-header p {
+            color: #666;
+        }
+
+        /* Form Elements */
+        .form-group {
+            margin-bottom: 1.5rem;
+        }
+
+        .input-group {
+            position: relative;
+            margin-bottom: 1.5rem;
+        }
+
+        .input-group input {
+            width: 100%;
+            padding: 1rem;
+            border: 2px solid #eee;
+            border-radius: 10px;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+        }
+
+        .input-group input:focus {
+            outline: none;
+            border-color: var(--primary);
+            box-shadow: 0 0 0 3px rgba(255,107,107,0.2);
+        }
+
+        .input-group label {
+            position: absolute;
+            left: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #999;
+            pointer-events: none;
+            transition: all 0.3s ease;
+        }
+
+        .input-group input:focus + label,
+        .input-group input:not(:placeholder-shown) + label {
+            top: -10px;
+            left: 0.8rem;
+            font-size: 0.8rem;
+            color: var(--primary);
+            background: white;
+            padding: 0 0.3rem;
+        }
+
+        .password-toggle {
+            position: absolute;
+            right: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
             cursor: pointer;
-            transition: 0.3s;
+            color: #999;
         }
 
-        .google-btn:hover {
-            background-color: #c1351d;
+        /* Action Links */
+        .login-actions {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 1.5rem 0;
+            font-size: 0.9rem;
         }
 
-        /* Responsive */
-        @media (max-width: 400px) {
+        .login-actions a {
+            color: var(--dark);
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .login-actions a:hover {
+            color: var(--primary);
+        }
+
+        /* Social Login */
+        .social-login {
+            margin-top: 2rem;
+            text-align: center;
+        }
+
+        .social-buttons {
+            display: flex;
+            gap: 1rem;
+            justify-content: center;
+            margin-top: 1rem;
+        }
+
+        .social-btn {
+            padding: 0.8rem 1.5rem;
+            border-radius: 8px;
+            border: none;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 0.8rem;
+            transition: transform 0.3s ease;
+        }
+
+        .social-btn.google {
+            background: #fff;
+            color: var(--dark);
+            border: 1px solid #ddd;
+        }
+
+        .social-btn.github {
+            background: var(--dark);
+            color: white;
+        }
+
+        .social-btn:hover {
+            transform: translateY(-2px);
+        }
+
+        /* Signup Link */
+        .signup-link {
+            text-align: center;
+            margin-top: 2rem;
+            color: var(--dark);
+        }
+
+        .signup-link a {
+            color: var(--primary);
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        @media (max-width: 480px) {
             .login-container {
-                width: 90%;
+                padding: 1rem;
+            }
+            
+            .login-card {
+                padding: 2rem 1rem;
             }
         }
     </style>
 </head>
 <body>
     <div class="login-container">
-        <h2>Login with Google</h2>
-        <button id="googleLogin" class="google-btn">Continue with Google</button>
+        <div class="login-card">
+            <div class="login-header">
+                <h1>Welcome </h1>
+                <p>Sign in to continue to BrandfLuence</p>
+            </div>
+
+            <form id="loginForm">
+                <div class="input-group">
+                    <input type="email" id="email" placeholder=" ">
+                    <label for="email">Email Address</label>
+                </div>
+
+                <div class="input-group">
+                    <input type="password" id="password" placeholder=" ">
+                    <label for="password">Password</label>
+                    <i class="fas fa-eye password-toggle" onclick="togglePassword()"></i>
+                </div>
+
+                <div class="login-actions">
+                    <label>
+                        <input type="checkbox"> Remember me
+                    </label>
+                    <a href="#forgot-password">Forgot Password?</a>
+                </div>
+
+                <button type="submit" class="cta-button" style="width: 100%;">
+                    <i class="fas fa-sign-in-alt"></i>
+                    Sign In
+                </button>
+
+                <div class="social-login">
+                    <p>Or continue with</p>
+                    <div class="social-buttons">
+                        <button type="button" class="social-btn google">
+                            <i class="fab fa-google"></i>
+                            Google
+                        </button>
+                        <button type="button" class="social-btn github">
+                            <i class="fab fa-github"></i>
+                            GitHub
+                        </button>
+                    </div>
+                </div>
+
+                <div class="signup-link">
+                    Don't have an account? <a href="signup.html">Sign up now</a>
+                </div>
+            </form>
+        </div>
     </div>
 
     <script>
-        // Initialize Firebase
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
-        firebase.initializeApp(firebaseConfig);
-
-        document.getElementById('googleLogin').addEventListener('click', () => {
-            const provider = new firebase.auth.GoogleAuthProvider();
-            firebase.auth().signInWithPopup(provider)
-                .then((result) => {
-                    // Check user role and redirect
-                    checkUserRole(result.user.uid);
-                })
-                .catch((error) => {
-                    console.error('Login error:', error);
-                });
-        });
-
-        function checkUserRole(uid) {
-            const db = firebase.firestore();
-            db.collection('users').doc(uid).get()
-                .then(doc => {
-                    if (doc.exists) {
-                        const role = doc.data().role;
-                        window.location.href = role === 'influencer' ? 
-                            'influencer.html' : 'company.html';
-                    } else {
-                        // Redirect to role selection
-                        window.location.href = 'role-selection.html';
-                    }
-                });
+        function togglePassword() {
+            const passwordField = document.getElementById('password');
+            const toggleIcon = document.querySelector('.password-toggle');
+            
+            if (passwordField.type === 'password') {
+                passwordField.type = 'text';
+                toggleIcon.classList.replace('fa-eye', 'fa-eye-slash');
+            } else {
+                passwordField.type = 'password';
+                toggleIcon.classList.replace('fa-eye-slash', 'fa-eye');
+            }
         }
+
+        document.getElementById('loginForm').addEventListener('submit', (e) => {
+            e.preventDefault();
+            // Add your login logic here
+        });
     </script>
 </body>
 </html>
